--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="Chocolate.css">
+  <link rel="stylesheet" href="chocolate.css">
 </head>
 
 <body>
